Fix alignment of car in one page

--- a/www/public/assets/llumar/css/responsive.css
+++ b/www/public/assets/llumar/css/responsive.css
@@ -24,7 +24,7 @@
 }
 @media only screen and (max-width: 1280px) {
     .hero-section-selct-black-ppf{
-        height: 432px;
+        height: 474px;
     }
 }
 @media only screen and (max-width: 992px) {
